<resources>
    <!-- Main page -->
    <string name="app_name">Intervalometer</string>
    <string name="bt_status_connected">Connected with: </string>
    <string name="bt_status_bt_unsupported">Bluetooth not available on your device.</string>
    <string name="bt_status_bt_off">Please enable Bluetooth on your device.</string>
    <string name="bt_status_disconnected">Click the Bluetooth Symbol to Connect to Device.</string>
    <string name="bt_status_select_device">Please select a Bluetooth Device.</string>
    <string name="transmission">Transmission</string>
    <string name="transmission_failed">Transmission Failed!</string>
    <string name="transmission_failed_too_long">Error the current version does only support up to %1$d Bytes. Your Function uses %2$d.</string>
    <string name="db_read_error">Error while reading from DB!</string>
    <!-- Info Msgs -->
    <string name="edit_template_save_dialog">Do you want to save the Changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="msg_nothing_selected">Nothing Selected.</string>

    <string name="section_input">Input</string>
    <string name="section_input_template">Template</string>
    <string name="section_input_duration">Duration:</string>
    <string name="section_input_number_photos">Number of Shots:</string>
    <string name="section_input_interval_function">Interval Function:</string>
    <string name="section_input_interval_function_constant">Constant</string>
    <string name="section_input_interval_function_linear">Linear</string>
    <string name="section_input_interval_function_quadratic">Quadratic</string>
    <string name="_h">h</string>
    <string name="_m">m</string>
    <string name="_s">s</string>
    <string name="_ms">ms</string>

    <!-- Text msgs -->
    <string name="msg_click_to_dismiss">Click here to Dismiss Info.</string>
    <string name="msg_click_after_fix">Click here after Fixing this.</string>
    <string name="msg_click_to_shutdown">Click here to Shut Down App.</string>
    <string name="msg_bt_disconnect_failed">Disconnecting with Device failed.</string>
    <string name="msg_bt_connecting_failed">Connecting with</string>
    <string name="msg_failed">failed. Please make sure that the Intervalometer is On and Bluetooth is enabled.</string>

    <!-- edit template -->
    <string name="choose_function">Choose Function: </string>
    <string name="choose_number_pictures">Number of Pictures: </string>
    <string name="linear_function">Linear</string>
    <string name="quadratic_function_left">Quadratic left</string>
    <string name="quadratic_function_right">Quadratic right</string>
    <string name="sigmoid_function">Sigmoid</string>
    <string name="unknown_function">Unknown</string>
    <string name="delete_function">Delete Function</string>
    <string name="something_went_wrong">Sorry something went wrong.</string>
    <string name="choose_frame_rate">Frame Rate:</string>
    <string name="number_frames">Num. Frames:</string>
    <string name="clip_duration">Video Length:</string>
    <string name="recording_time">Recording Time:</string>

    <!-- Preference -->
    <string name="title_activity_settings">Settings</string>
    <string name="author">Author</string>
    <string name="version">Version</string>
    <string name="version_info_copied">Version information has been copied to your clipboard.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="total">Total:</string>
    <string name="final_video_fps">Video FPS:</string>
    <string name="minimal_delay">Min. Shutter Delay [ms]:</string>
    <string name="App_information">App Information</string>
    <string name="shutter_delay_unit">Shutter Delay Unit:</string>

</resources>